# Friday

./: .gitignore  README.md
agent/: .gitignore  livekit.toml  pyproject.toml
agent/src/: agent.py
local_service/: .gitignore  README.md  profile.seed.json  pyproject.toml
local_service/scripts/: fetch_vosk_model.sh  google_calendar_auth.py
local_service/src/: config.py  events.py  google_auth.py  logging_setup.py  main.py  profile.py  routes.py  runtime.py  tokens.py  wake.py
local_service/src/tools/: __init__.py  base.py  get_time.py  get_weather.py  google_calendar.py  mac_action.py  remember.py
mac/: project.yml
mac/Friday/: AppDelegate.swift  AppState.swift  BootCoordinator.swift  FridayApp.swift  Info.plist  LiveKitController.swift  LocalServiceClient.swift  LocalServiceProcess.swift  MenuBarController.swift
mac/Friday.xcodeproj/: project.pbxproj
mac/Friday.xcodeproj/project.xcworkspace/xcuserdata/jas.xcuserdatad/: UserInterfaceState.xcuserstate
